client-deploy/hungvu-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hungvu-client-deploy
  namespace: default
  labels:
    app:  hungvu-client
spec:
  selector:
    matchLabels:
      app: hungvu-client
  replicas: 1
  template:
    metadata:
      labels:
        app:  hungvu-client
    spec:
      containers:
      - name:  hungvu-client
        image:  hungvu034/hungvu-client
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: hungvu-client-svc
  namespace: default
spec:
  selector:
    app: hungvu-client
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
