client-deploy/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hungvu.greenframe.work
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: hungvu-client-svc
            port: 
              number: 80
  - host: abc.greenframe.work
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: abc-client-svc
            port: 
              number: 80
